# Reasoning-Agents

./: README.md  _config.yml
Esperiments/: Animations.md  README.md
Esperiments/ROS_Turtlebot/Hospital/Delivery/NO_HIL/: hospital_beta=30_noHIL_case1.p
Esperiments/ROS_Turtlebot/Hospital/Surveillance/NO_HIL/: hospital_beta=0_noHIL_case2.p
Esperiments/ROS_Turtlebot/Hotel/Delivery/HIL/: turtlebot_hotel_2.p
Esperiments/ROS_Turtlebot/Hotel/Delivery/NO_HIL/: hotel_beta=0_noHIL_case1.p  hotel_beta=30_noHIL_case1.p
Reasoning_Agents_Project_HIL_Mix_Initiative_Control_for_Temporal_Tasks/hil_mix_control/src/: hil_mix_planner_tiago.py
Reasoning_Agents_Project_HIL_Mix_Initiative_Control_for_Temporal_Tasks/hil_mix_control/src/hotel_walls/: model.sdf
code/: README.md
code/script/: vis_sim.py
code/script/hil_mix_control/: CMakeLists.txt
code/script/hil_mix_control/src/: 2D_grid.py  goforward.py  hil_mix_planner_turtlebot.py  init_2d.py  init_hospital.py  init_hotel.py  prova.py
code/script/hil_mix_control/src/data/: exp_long_cord.p  hospital_beta=0_noHIL_case1(1).p  hospital_beta=0_noHIL_case1.p  hospital_beta=30_HILr6_case1.p  hospital_beta=30_noHIL_case2.p  hospital_beta=30_temp_r1r3ERR.p  hospital_beta=30_temp_r2r5.p  hotel_beta=0_noHIL_case2(1).p  hotel_beta=0_noHIL_case2.p  hotel_beta=25_HIL_case1.p  hotel_beta=30_noHIL_case1.p  hotel_beta=30_noHIL_case2.p  hotel_beta=30_noHil_case2.p  turtlebot.p  turtlebot_hospital.p  turtlebot_hotel(1).p  turtlebot_hotel.p  turtlebot_test.p
code/script/hil_mix_control/src/ltl_tools/: buchi.py  discrete_plan.py  ltl2ba.py  planner.py  product.py  ts.py
code/script/hil_mix_control/src/ltl_tools/boolean_formulas/: lexer.py  parser.py
code/turtlebot3/: README.md
code/turtlebot3/turtlebot3_experiments/: LICENCE
code/turtlebot3/turtlebot3_experiments/turtlebot3_experiments/: CMakeLists.txt  package.xml
code/turtlebot3/turtlebot3_experiments/turtlebot3_files/: CMakeLists.txt  package.xml
code/turtlebot3/turtlebot3_experiments/turtlebot3_files/launch/: turtlebot3_hospital.launch  turtlebot3_hotel.launch
code/turtlebot3/turtlebot3_experiments/turtlebot3_files/maps/hospital/: map.pgm  map.yaml
code/turtlebot3/turtlebot3_experiments/turtlebot3_files/maps/hotel/: map.yaml
code/turtlebot3/turtlebot3_experiments/turtlebot3_files/models/turtlebot3_hospital/: model.config  model.sdf
code/turtlebot3/turtlebot3_experiments/turtlebot3_files/models/turtlebot3_hotel/: model.sdf
code/turtlebot3/turtlebot3_experiments/turtlebot3_files/worlds/: turtlebot3_hospital.world  turtlebot3_hotel.world
code/turtlebot3_experiments/turtlebot3_files/: CMakeLists.txt  package.xml  setup.py
code/turtlebot3_experiments/turtlebot3_files/launch/: temp_task.launch  turtlebot3_hospital.launch  turtlebot3_hotel.launch
code/turtlebot3_experiments/turtlebot3_files/maps/hospital/: map.yaml
code/turtlebot3_experiments/turtlebot3_files/maps/hotel/: map.pgm
code/turtlebot3_experiments/turtlebot3_files/models/turtlebot3_hospital/: model.sdf
code/turtlebot3_experiments/turtlebot3_files/nodes/: temp_task.py
code/turtlebot3_experiments/turtlebot3_files/worlds/: turtlebot3_hospital.world  turtlebot3_hotel.world
experiments/: README.md  list.md
