<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_files</name>
  <version>0.1.0</version>
  <description>
    Gazebo files for tutlebot3 experiments
  </description>
  <author email="bellan.1863043@studenti.uniroma1.it">Désirée Bellan</author>
  <maintainer email="bellan.1863043@studenti.uniroma1.it">Désirée Bellan</maintainer>
  <license> MIT </license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <depend>message_generation</depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
