<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_experiments</name>
  <version>0.1.0</version>
  <description>
    ROS package for turtlebot3 experiments 
  </description>
  <author email="bellan.1863043@studenti.uniroma1.it">Désirée Bellan</author>
  <maintainer email="bellan.1863043@studenti.uniroma1.it">Désirée Bellan</maintainer>
  <license> MIT </license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>turtlebot3_files</exec_depend>
  <export><metapackage/></export>
</package>
